--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
+    "tesseract.js": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
