--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
+    "faker": "^6.6.6",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
